<resources>
    <string name="app_name">DevChat</string>
    <string name="str_Title">DevChat</string>
    <string name="str_login">Digite seu e-mail</string>
    <string name="str_Password">Digite sua senha</string>
    <string name="btn_Login">Entrar</string>
    <string name="btn_Register">Cadastrar</string>
    <string name="str_Manter">Manter Conectado</string>
    <string name="str_register_username">nome de usuário</string>
    <string name="str_register_password">senha</string>
    <string name="str_register_email">email</string>
    <string name="str_register_account">Já possui uma conta?</string>
    <string name="title_activity_private_chat_list">PrivateChatList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_messages_list">MessagesListActivity</string>
    <string name="str_cat_config">Configurações</string>
    <string name="str_nav_private">Lista de chats</string>
    <string name="str_nav_global">Chat Global</string>
    <string name="str_nav_perfil">Perfil</string>
    <string name="str_nav_config">Configurações</string>
    <string name="menu_opcao_sair">Sair</string>
    <string name="menu_opcao_mensagem">+Mensagem</string>
    <string name="title_activity_message_list">MessageListActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
</resources>
