<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor"
    tools:context=".modules.register.RegisterActivity">

    <Button
        android:id="@+id/btn_register_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_image"

        android:text="Button"

        app:layout_constraintBottom_toTopOf="@+id/et_register_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />

    <EditText
        android:id="@+id/et_register_username"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/str_register_username"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/et_register_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65999997"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/et_register_email"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/str_register_email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/et_register_password"
        app:layout_constraintEnd_toEndOf="@+id/et_register_username"
        app:layout_constraintStart_toStartOf="@+id/et_register_username"
        app:layout_constraintTop_toBottomOf="@+id/et_register_username" />

    <EditText
        android:id="@+id/et_register_password"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_edittext"
        android:ems="10"
        android:hint="@string/str_register_password"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_register_register"
        app:layout_constraintEnd_toEndOf="@+id/et_register_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_register_email"
        app:layout_constraintTop_toBottomOf="@+id/et_register_email" />

    <Button
        android:id="@+id/btn_register_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"

        android:background="@drawable/rounded_button"

        android:text="Cadastrar"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_register_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_register_password"
        app:layout_constraintTop_toBottomOf="@+id/et_register_password" />

    <TextView
        android:id="@+id/tv_register_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/str_register_account"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_register_register"
        app:layout_constraintStart_toStartOf="@+id/btn_register_register"
        app:layout_constraintTop_toBottomOf="@+id/btn_register_register"
        app:layout_constraintVertical_bias="0.100000024" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ci_register_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_register_image"
        app:layout_constraintEnd_toEndOf="@+id/btn_register_image"
        app:layout_constraintStart_toStartOf="@+id/btn_register_image"
        app:layout_constraintTop_toTopOf="@+id/btn_register_image" />

</android.support.constraint.ConstraintLayout>